// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-view Renders \`create-view\` with empty modal 1`] = `
<form
  class="v-form"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Create a view
      </span>
    </div>
    <div
      class="text"
    >
      <c-alert-stub
        type="info"
      >
        You're duplicating a view. All duplicated view's rows/widgets will be copied on the new view.
      </c-alert-stub>
      <view-form-stub
        form="[object Object]"
        groups=""
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn"
        depressed=""
        text=""
        type="button"
      >
        Cancel
      </button>
      <button
        class="v-btn primary"
        type="submit"
      >
        Submit
      </button>
      <!---->
    </div>
  </div>
</form>
`;

exports[`create-view Renders \`create-view\` with title 1`] = `
<form
  class="v-form"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Create view custom title
      </span>
    </div>
    <div
      class="text"
    >
      <c-alert-stub
        type="info"
      >
        You're duplicating a view. All duplicated view's rows/widgets will be copied on the new view.
      </c-alert-stub>
      <view-form-stub
        form="[object Object]"
        groups=""
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn"
        depressed=""
        text=""
        type="button"
      >
        Cancel
      </button>
      <button
        class="v-btn primary"
        type="submit"
      >
        Submit
      </button>
      <button
        class="v-btn"
        color="error"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</form>
`;

exports[`create-view Renders \`create-view\` without rights 1`] = `
<form
  class="v-form"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Create a view
      </span>
    </div>
    <div
      class="text"
    >
      <c-alert-stub
        type="info"
      >
        You're duplicating a view. All duplicated view's rows/widgets will be copied on the new view.
      </c-alert-stub>
      <view-form-stub
        form="[object Object]"
        groups=""
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn"
        depressed=""
        text=""
        type="button"
      >
        Cancel
      </button>
      <button
        class="v-btn primary"
        type="submit"
      >
        Submit
      </button>
      <!---->
    </div>
  </div>
</form>
`;
